deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app-deployment
  namespace: default
  labels:
    app: php-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
        - name: php-container
          image: karthik621/phpapp:appimage
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
