statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: php-db-statefulset

spec:
  serviceName: mysqldb
  replicas: 1
  selector:
    matchLabels:
      app: php-db
  template:
    metadata:
      labels:
        app: php-db
    spec:
      containers:
        - name: db-container
          image: karthik621/phpapp:dbimage
          
          ports:
            - containerPort: 3306
              name: mysql
              
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          volumeMounts:
            - name: my-sql-data
              mountPath: /usr/share/nginx/htnl
              
  volumeClaimTemplates:
    - metadata:
        name: my-sql-data
        
      spec:
        accessModes:
          - ReadWriteOnce

        storageClassName: gp2
         
        resources:
          requests:
            storage: 2Gi
