php-app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: php-app-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: php-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
