php-db-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: default
spec:
  clusterIP: None
  selector:
    app: php-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
