network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-phpapp-to-mysql-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: php-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector:
            matchLabels:
              app: php-app
          ports:
              port: 80
            - protocol: TCP
             
              
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: php-db
          ports:
              port: 3306
            - protocol: TCP
              
    - to:
        - podSelector:
            matchLabels:
              k8s-app: kube-dns
          ports:
              port: 53
            - protocol: UDP
